Fixed API base url's