@@ -3,8 +3,8 @@ package edu.boardgames.collections.explorer.infrastructure.bgg;
 import java.net.URI;
 
 public enum BggApi {
-	V1("https://www.boardgamegeek.com/xmlapi/"),
-	V2("https://www.boardgamegeek.com/xmlapi2/");
+	V1("https://boardgamegeek.com/xmlapi/"),
+	V2("https://boardgamegeek.com/xmlapi2/");
 
 	private final String baseUrl;
 
@@ -13,6 +13,6 @@ public enum BggApi {
 	}
 
 	public BggUrlFactory create(String subpath) {
-		return queryString -> URI.create(String.format("%s%s?%s", baseUrl, subpath, queryString));
+		return queryString -> URI.create("%s%s?%s".formatted(baseUrl, subpath, queryString));
 	}
 }
